--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,1 +1,42 @@
-<p>home works!</p>
+<header></header>
+  <div style="height: 85vh; width: 100vw;" class="d-flex justify-content-center align-items-center bg-dark">
+    <div class="row position-absolute">
+      <div class="col position-absolute" style="top:20px;">
+        <div ngbDropdown class="d-inline-block">
+          <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Language</button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button ngbDropdownItem>Italiano</button>
+            <button ngbDropdownItem>English</button>
+            <button ngbDropdownItem>Francais</button>
+          </div>
+        </div>
+      </div>
+    <div id="centraBox" class="d-flex justify-content-between bg-info" style="width: 80vw; height: 60vh;">
+      <div id="welcomeBox" class="w-50 d-flex flex-column bg-warning justify-content-center align-items-center">
+        <h1 class="w-50 bg-info rounded d-block" style="height: fit-content;">Welcome To Trivia Online!</h1>
+        <div style="height: fit-content;" class="d-flex flex-column d-inline-block my-2" id="registerBox">
+          <div class="d-flex my-2">
+            <h2 class="mx-2" for="">Insert Your Trivianame</h2>
+            <input ngModel #userName="ngModel" class="mx-2 rounded" type="text" name="" id="userName">
+          </div>
+          <button (click)="saveUserName(userName.value)" class="my-2 btn btn-success">Gioca!</button>
+          {{userName.value}}{{this.store.name}}
+        </div>
+    </div>
+    <div id="preview" class="w-50 d-flex bg-light justify-content-center align-items-center">
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="1000">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100 active" src="https://images.unsplash.com/photo-1610878180933-123728745d22?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y2FuYWRhJTIwbmF0dXJlfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://media.istockphoto.com/photos/mountain-landscape-picture-id517188688?k=20&m=517188688&w=0&h=pCjvUkNlz9_esVvQw2Wgc8VJZBMgJrB0FQmktCA0KYY=" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://previews.123rf.com/images/chernetskiy/chernetskiy0908/chernetskiy090800057/5396447-from-nature-with-love.jpg" alt="Third slide">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
