--- a/src/app/modules/home/pages/aboutus/aboutus.component.html
+++ b/src/app/modules/home/pages/aboutus/aboutus.component.html
@@ -1,1 +1,50 @@
-<p>aboutus works!</p>
+<header style="height: 15vh; background-color: bisque;"></header>
+  <div style="height: 85vh; width: 100vw; background-color: #358873;" class="d-flex justify-content-center align-items-center">
+    <div class="row position-absolute">
+    <div id="centraBox" class="d-flex justify-content-between" style="width: 80vw; height: 60vh;">
+      <div id="welcomeBox" class="w-100 d-flex  justify-content-center align-items-center">
+        <div style="width: 20%;" class="h-100 border-right">
+          <section style="height:10vh;" class="d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: cadetblue;"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
+            <p class="my-3">Da sempre innamorato di Trivia.</p>
+            <p class="my-3">Scalatore di montagne a mani nude.</p>
+          </div>
+        </div>
+        <div style="width: 20%;" class="h-100 border-right">
+          <section style="height:10vh;" class="d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: cadetblue;"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
+            <p class="my-3">Da sempre innamorato di Trivia.</p>
+            <p class="my-3">Scalatore di montagne a mani nude.</p>
+          </div>
+        </div>
+        <div style="width: 20%;" class="h-100 border-right">
+          <section style="height:10vh;" class="d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: cadetblue;"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
+            <p class="my-3">Da sempre innamorato di Trivia.</p>
+            <p class="my-3">Scalatore di montagne a mani nude.</p>
+          </div>
+        </div>
+        <div style="width: 20%;" class="h-100 border-right">
+          <section style="height:10vh;" class=" d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: cadetblue;"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
+            <p class="my-3">Da sempre innamorato di Trivia.</p>
+            <p class="my-3">Scalatore di montagne a mani nude.</p>
+          </div>
+        </div>
+        <div style="width: 20%;" class="h-100 ">
+          <section style="height:10vh;" class=" d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: cadetblue;"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
+            <p class="my-3">Da sempre innamorato di Trivia.</p>
+            <p class="my-3">Scalatore di montagne a mani nude.</p>
+          </div>
+        </div>
+      </div>
+      <game-footer class="w-100" style="position: absolute; bottom: 0;"></game-footer>
+  </div>
+</div>
+
