--- a/src/app/modules/home/pages/home/home.component.scss
+++ b/src/app/modules/home/pages/home/home.component.scss
@@ -2,3 +2,11 @@ header{
   height: 15vh;
   background-color: burlywood;
 }
+
+#welcomeBox{
+  background-color: #9adf9f;
+}
+
+#userName{
+  background-color: #8fd176;
+}
