--- a/src/app/modules/lobby/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/lobby/pages/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
           <div class="card-header text-white bg-success"><h5 class="card-title">Easy mode</h5></div>
           <div class="card-body">
             <p>description: 10 easy questions bla bla bla</p>
-            <button type="button" class="btn btn-success" (click)='getMode()'>Start game</button>
+            <button type="button" class="btn btn-success" (click)='getEasyMode()'>Start game</button>
           </div>
         </div>
 
@@ -20,19 +20,19 @@
           <div class="card-header  text-white bg-danger"><h5 class="card-title">Hard mode</h5></div>
           <div class="card-body">
             <p>description: 15 hard questions bla bla bla</p>
-            <button type="button" class="btn btn-danger" (click)='getMode()'>Start game</button>
+            <button type="button" class="btn btn-danger" (click)='getHardMode()'>Start game</button>
           </div>
         </div>
       </div>
     </ng-template>
   </li>
   <li [ngbNavItem]="1">
-    <a ngbNavLink class="">Custom Mode</a>
+    <a ngbNavLink class="" [ngClass]="{'border-primary': active, 'bg-primary':active, 'text-white':active, 'border-white': !active, 'bg-white': !active}">Custom Mode</a>
     <ng-template ngbNavContent>
       <form  class="mb-5">
         <div class="row g-3">
           <div class="col-6">
-            <label for="name" class="form-label">Number of questions:</label>
+            <label for="number" class="form-label">Number of questions:</label>
             <input type="number" class="form-control" name="questions" required ngModel #numField="ngModel">
           </div>
         </div>
