--- a/src/app/modules/home/pages/aboutus/aboutus.component.scss
+++ b/src/app/modules/home/pages/aboutus/aboutus.component.scss
@@ -10,3 +10,11 @@ header{
 #userName{
   background-color: #8fd176;
 }
+
+#welcomeBox{
+  color: whitesmoke;
+  background-color: #016166!important;
+  width: 80vw;
+  height: 60vh;
+   border: 2px solid #018574;
+}
