--- a/src/app/modules/home/components/footer/footer.component.html
+++ b/src/app/modules/home/components/footer/footer.component.html
@@ -1,6 +1,6 @@
   <footer class="d-flex flex-wrap justify-content-center align-items-center">
     <ul class="nav col-md-4 justify-content-center">
-      <li class="nav-item"><a href="#" routerLink="/terms" class="nav-link px-2 text-muted">Terms</a></li>
+      <li class="nav-item rounded-pill"><a href="#" routerLink="/terms" class="nav-link px-2 text-muted">Terms</a></li>
       <li class="nav-item"><a href="#" routerLink="/privacy" class="nav-link px-2 text-muted">Privacy</a></li>
       <li class="nav-item"><a href="#" routerLink="/aboutus" class="nav-link px-2 text-muted">About Us</a></li>
     </ul>
