--- a/src/app/modules/home/pages/home/home.component.scss
+++ b/src/app/modules/home/pages/home/home.component.scss
@@ -1,12 +1,23 @@
 header{
   height: 15vh;
-  background-color: burlywood;
-}
-
-#welcomeBox{
-  background-color: #9adf9f;
+  background-color: #016166;
 }
 
 #userName{
-  background-color: #8fd176;
+  background-color: #2f9499;
+  border: 2px solid #a86c5d;
+}
+
+#centraBox{
+  color: whitesmoke;
+  background-color: #016166;
+  width: 80vw;
+  height: 60vh;
+   border: 2px solid #018574;
+}
+
+button{
+ color: #016166;
+ background-color: #a86c5d;
+
 }
