--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -9,22 +9,35 @@
               <h2 class="mx-2 d-inline" for="">Insert Your Trivianame</h2>
               <input ngModel #userName="ngModel" class="mx-2 rounded" type="text" name="" id="userName">
             </div>
-            <button routerLink="/lobby" (click)="saveUserName(userName.value)" class="my-2 btn w-100">Play!</button>
+            <button [disabled]="!userName.value ? true : false " routerLink="/lobby" (click)="saveUserName(userName.value)" class="my-2 btn w-100">PLAY!</button>
           </div>
       </div>
       <div id="preview" class="w-50 d-flex justify-content-center align-items-center">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="1000">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
           <div class="carousel-inner">
-            <div class="d-flex justify-content-center carousel-item active">
-              <img class="d-block w-75" src="https://images.unsplash.com/photo-1610878180933-123728745d22?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y2FuYWRhJTIwbmF0dXJlfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="First slide">
+            <div class="carousel-item active">
+              <img style="width: fit-content; height: 300px;" class="d-block" src="assets/img1.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="https://media.istockphoto.com/photos/mountain-landscape-picture-id517188688?k=20&m=517188688&w=0&h=pCjvUkNlz9_esVvQw2Wgc8VJZBMgJrB0FQmktCA0KYY=" alt="Second slide">
+              <img style="width: fit-content; height: 300px;" class="d-block" src="assets/img2.jpg" alt="Second slide">
             </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="https://previews.123rf.com/images/chernetskiy/chernetskiy0908/chernetskiy090800057/5396447-from-nature-with-love.jpg" alt="Third slide">
+            <div class="w-100 carousel-item">
+              <img style="width: fit-content; height: 300px;" class="d-block" src="assets/img3.jpg" alt="Third slide">
             </div>
           </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
       <game-footer class="w-50" style="position: absolute; bottom: 0;"></game-footer>
