--- a/src/app/modules/lobby/pages/dashboard/dashboard.component.scss
+++ b/src/app/modules/lobby/pages/dashboard/dashboard.component.scss
@@ -1,3 +1,9 @@
 a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-primary:focus {
-  background-color: #007bff !important;
+  background-color: #016166 !important;
 }
+ .bg-primary{
+  background-color: #016166 !important;
+ }
+ .border-primary{
+  background-color: #016166 !important;
+ }
