--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -9,7 +9,7 @@
               <h2 class="mx-2 d-inline" for="">Insert Your Trivianame</h2>
               <input ngModel #userName="ngModel" class="mx-2 rounded" type="text" name="" id="userName">
             </div>
-            <button routerLink="/lobby" (click)="saveUserName(userName.value)" class="my-2 btn w-100">Play!</button>
+            <button [disabled]="!userName.value ? true : false " routerLink="/lobby" (click)="saveUserName(userName.value)" class="my-2 btn w-100">Play!</button>
           </div>
       </div>
       <div id="preview" class="w-50 d-flex justify-content-center align-items-center">
