--- a/src/app/modules/lobby/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/lobby/pages/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
                   <div class="card-header text-white" style="background-color: #2f9499 ;"><h5 class="card-title">Easy mode</h5></div>
                   <div class="card-body bg-info">
                     <p>description: 10 easy questions bla bla bla</p>
-                    <button type="button" class="btn btn-success" (click)='getEasyMode()'>Start game</button>
+                    <button type="button" class="btn btn-success" (click)='getEasyMode()' routerLink="gameroom">Start game</button>
                   </div>
                 </div>
 
@@ -23,7 +23,7 @@
                   <div class="card-header text-white" style="background-color: #804b36;" ><h5 class="card-title">Hard mode</h5></div>
                   <div class="card-body bg-info">
                     <p>description: 15 hard questions bla bla bla</p>
-                    <button type="button" class="btn btn-danger" (click)='getHardMode()'>Start game</button>
+                    <button type="button" class="btn btn-danger" (click)='getHardMode()' routerLink="gameroom">Start game</button>
                   </div>
                 </div>
               </div>
@@ -32,25 +32,25 @@
           <li [ngbNavItem]="1">
             <a ngbNavLink class="text-white" [ngClass]="{'border-primary': tab, 'bg-primary':tab, 'border-info': !tab, 'bg-inactive': !tab}">Custom Mode</a>
             <ng-template ngbNavContent class="d-flex  align-items-center">
-              <form  #custom="ngForm" class="bg-info rounded py-3 px-5"  (ngSubmit)="submitCustom(custom)">
+              <div class="bg-info rounded py-3 px-5"  >
                 <h2 class="pt-0 mt-0">Customize your match</h2>
                 <div class="form-row">
                   <div class="col-12 form-group">
                     <label for="categories" class="form-label">Category</label>
-                    <select class="form-select form-control" name="category" required ngModel #categoryField="ngModel">
+                    <select [(ngModel)]="customForm.category" class="form-select form-control" name="category" required ngModel #categoryField="ngModel">
                       <option selected value="">Any</option>
-                      <option *ngFor="let category of categories" value="{{category}}">{{category}}</option>
+                      <option *ngFor="let category of categories" value="{{category.id}}">{{category.name}}</option>
                     </select>
                   </div>
                 </div>
                 <div class="form-row">
                   <div class="col-auto  form-group">
                     <label for="number" class="form-label">Number of questions:</label>
-                    <input type="number" class="form-control" name="questions" required ngModel #numField="ngModel">
+                    <input type="number" class="form-control" name="questions" required ngModel [(ngModel)]="customForm.questions" #numField="ngModel">
                   </div>
                   <div class="col-auto  form-group">
                     <label for="difficulty" class="form-label">Difficulty</label>
-                    <select class="form-select form-control" name="difficulty" required ngModel #difficultyField="ngModel">
+                    <select class="form-select form-control" name="difficulty" required ngModel [(ngModel)]="customForm.difficulty" #difficultyField="ngModel">
                       <option selected value="">Any</option>
                       <option value="easy">Easy</option>
                       <option value="medium">Medium</option>
@@ -61,23 +61,23 @@
                     <fieldset class="form-group ml-2">
                       <legend class="col-form-label  pt-0">Types</legend>
                       <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="customRadioInline1" name="type" ngModel #typeField1="ngModel" class="custom-control-input">
+                        <input type="radio" id="customRadioInline1" name="type" [(ngModel)]="customForm.type" ngModel #typeField1="ngModel" class="custom-control-input">
                         <label class="custom-control-label" for="customRadioInline1">Any Type</label>
                       </div>
                       <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="customRadioInline2" name="type" ngModel #typeField2="ngModel" class="custom-control-input" value="multiple">
+                        <input type="radio" id="customRadioInline2" name="type" [(ngModel)]="customForm.type" ngModel #typeField2="ngModel" class="custom-control-input" value="multiple">
                         <label class="custom-control-label" for="customRadioInline2">Multiple Choices</label>
                       </div>
                       <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="customRadioInline3" name="type" ngModel #typeField3="ngModel" class="custom-control-input" value="boolean">
+                        <input type="radio" id="customRadioInline3" name="type" [(ngModel)]="customForm.type" ngModel #typeField3="ngModel" class="custom-control-input" value="boolean">
                         <label class="custom-control-label" for="customRadioInline3">True/False</label>
                       </div>
                     </fieldset>
                 </div>
                 <div class="form-row">
-                  <button type="submit" class="btn mx-auto mt-3">Start game</button>
+                  <button  type="submit" class="btn mx-auto mt-3" routerLink="gameroom" (click)="getCustomMode()">Start game</button>
                 </div>
-              </form>
+              </div>
             </ng-template>
           </li>
         </ul>
