--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,5 +1,4 @@
-<header></header>
-<div style="height: 85vh; width: 100vw; background-color: #2f9499;" class="d-flex justify-content-center align-items-center">
+<div style="height: 85vh; width: 100vw;" class="d-flex justify-content-center align-items-center">
   <div class="d-flex position-absolute">
     <div id="centraBox" class="d-flex justify-content-between">
       <div id="welcomeBox" class="w-50 d-flex flex-column justify-content-center align-items-center">
