--- a/src/app/modules/home/pages/privacy/privacy.component.html
+++ b/src/app/modules/home/pages/privacy/privacy.component.html
@@ -1,28 +1,23 @@
-<div class="d-flex justify-content-center m-4">
-    <div class="container">
+<header></header>
 
-        <button href="#" class="btn m-5">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                class="bi bi-house-door-fill" viewBox="0 0 16 16">
-                <path
-                    d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z" />
-            </svg>
-            <span><strong>Home Page</strong></span>
-        </button>
+<div style="height: 85vh; width: 100vw; background-color: #2f9499;"
+    class="d-flex justify-content-center align-items-center">
+    <div class="d-flex position-absolute">
+        <div id="centraBox">
+            <div class="container">
+                <p class="title"><strong>PRIVACY</strong></p>
 
-        <h4><strong>PRIVACY</strong></h4>
+                <div class="d-flex buttons">
+                    <div class="d-flex flex-column">
+                        <button class="btn" *ngFor="let button of buttons" (click)="selectDescription(button.id)"><strong>{{ button.id }}.{{ button.label }}</strong></button>
+                    </div>
 
-        <div class="d-flex">
-            <div class="d-flex flex-column buttons">
-                <button class="btn" *ngFor="let button of buttons" (click)="selectDescription(button.id)">{{ button.id
-                    }} {{ button.label }}</button>
-            </div>
-
-            <div class="content">
-                <h5>{{ content.title }}</h5>
-                <p>{{ content.description }}</p>
+                    <div class="content">
+                        <p><strong>{{ content.title }}</strong></p>
+                        <p>{{ content.description }}</p>
+                    </div>
+                </div>
             </div>
         </div>
-
-
     </div>
+</div>
