--- a/src/app/modules/lobby/pages/dashboard/dashboard.component.scss
+++ b/src/app/modules/lobby/pages/dashboard/dashboard.component.scss
@@ -1,28 +1,23 @@
-a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-primary:focus {
-  background-color: #016166 !important;
-}
- .bg-primary{
-  background-color: #016166 !important;
- }
- .bg-info{
-  background-color:  #2f9499 !important;
- }
+// a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-primary:focus {
+//   background-color: #016166 !important;
+// }
+//  .bg-primary{
+//   background-color: #016166 !important;
+//  }
+//  .bg-info{
+//   background-color:  #2f9499 !important;
+//  }
 
- .bg-inactive{
-  background-color:  #01616694 !important;
- }
- .border-primary, .border-primary:focus  {
-  border-color: #016166 !important;
- }
- .border-info{
-  border-color: #2f9499 !important;
+//  .bg-inactive{
+//   background-color:  #01616694 !important;
+//  }
+//  .border-primary, .border-primary:focus  {
+//   border-color: #016166 !important;
+//  }
+//  .border-info{
+//   border-color: #2f9499 !important;
 
- }
-
- header{
-  height: 15vh;
-  background-color: #016166;
-}
+//  }
 
 #userName{
   background-color: #2f9499;
@@ -44,7 +39,3 @@ button{
 .title-form{
 color:#a86c5d;
 }
-// form{
-//   width: 75vw;
-//   height: 40vh;
-// }
