--- a/src/app/modules/lobby/pages/game-room/game-room.component.html
+++ b/src/app/modules/lobby/pages/game-room/game-room.component.html
@@ -1,10 +1,10 @@
-<div style="height: 85vh; width: 100vw; background-color: #2f9499;" class="d-flex justify-content-center align-items-center">
+<div style="height: 85vh; width: 100vw;" class="d-flex justify-content-center align-items-center">
   <div class="d-flex position-absolute">
     <div id="centraBox" class="d-flex justify-content-center align-items-center rounded text-white">
 
-      <div *ngIf="questions">
+      <div class="w-75" *ngIf="questions">
         <h3 class="text-center my-5">{{questions[this.index].category}}</h3>
-        <h3 class="my-5">{{questions[this.index].question}}</h3>
+        <h3 class="text-center my-5">{{questions[this.index].question}}</h3>
         <div class="w-100 d-flex justify-content-center my-5">
           <button class="btn justify-content-center mx-2"  (click)="checkAnswer(answer)" *ngFor=" let answer of questions[this.index].answers; index as i">
             {{answer}}</button>
