--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
-<header class="d-flex justify-content-center pt-5">
-  <svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     viewBox="0 0 28 14.2" style="enable-background:new 0 0 28 14.2; width: 150px" xml:space="preserve" >
+<header class="d-flex justify-content-center align-items-center">
+  <svg routerLink='' routerLinkActive="router-link-active"  version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     viewBox="0 0 28 14.2" style="enable-background:new 0 0 28 14.2; width: 150px" xml:space="preserve">
   <style type="text/css">
     .st0{fill:#013033;}
     .st1{fill:#A86C5D;}
@@ -117,4 +117,5 @@
     </g>
   </g>
   </svg>
+  <button class="btn" routerLink="/leaderboard"> CLASSIFICA</button>
 </header>
