--- a/src/app/modules/lobby/pages/game-room/game-room.component.html
+++ b/src/app/modules/lobby/pages/game-room/game-room.component.html
@@ -10,6 +10,9 @@
             {{answer}}</button>
         </div>
       </div>
+      <ng-template *ngIf="userScore">
+        <h2>{{triviaName}} hai totalizzato </h2>
+      </ng-template>
 
     </div>
     </div>
