--- a/src/app/modules/home/pages/terms/terms.component.html
+++ b/src/app/modules/home/pages/terms/terms.component.html
@@ -1,4 +1,4 @@
-<div style="height: 85vh; width: 100vw; background-color: #2f9499;"
+<div style="height: 85vh; width: 100vw;"
     class="d-flex justify-content-center align-items-center">
     <div class="d-flex position-absolute">
         <div id="centraBox" class="d-flex justify-content-center pt-5 px-4">
@@ -16,6 +16,7 @@
                     </div>
                 </div>
             </div>
+            <game-footer class="w-100" style="position: absolute; bottom: 0;"></game-footer>
         </div>
     </div>
 </div>
