--- a/src/app/modules/home/pages/aboutus/aboutus.component.html
+++ b/src/app/modules/home/pages/aboutus/aboutus.component.html
@@ -1,5 +1,4 @@
-<header style="height: 15vh; background-color:  #016166;"></header>
-  <div style="height: 85vh; width: 100vw; background-color: #2f9499;" class="d-flex justify-content-center align-items-center">
+  <div style="height: 85vh; width: 100vw;" class="d-flex justify-content-center align-items-center">
     <div class="row position-absolute">
     <div id="centraBox" class="d-flex justify-content-between" style="width: 80vw; height: 60vh;">
       <div id="welcomeBox" class="w-100 d-flex  justify-content-center align-items-center">
