--- a/src/app/modules/lobby/pages/game-room/game-room.component.html
+++ b/src/app/modules/lobby/pages/game-room/game-room.component.html
@@ -2,14 +2,22 @@
   <div class="d-flex position-absolute">
     <div id="centraBox" class="d-flex justify-content-center align-items-center rounded text-white">
 
-      <div *ngIf="questions">
+      <div class="w-75" *ngIf="!userScore ; else boardscore">
         <h3 class="text-center my-5">{{questions[this.index].category}}</h3>
-        <h3 class="my-5">{{questions[this.index].question}}</h3>
+        <h3 class="text-center my-5">{{questions[this.index].question}}</h3>
         <div class="w-100 d-flex justify-content-center my-5">
           <button class="btn justify-content-center mx-2"  (click)="checkAnswer(answer)" *ngFor=" let answer of questions[this.index].answers; index as i">
             {{answer}}</button>
         </div>
       </div>
+      <ng-template #boardscore>
+        <div *ngIf="triviaCredentials$ |async as credentials" class="shadow border border-info rounded-lg p-3">
+          <h1 class="text-center text-danger">{{credentials.userName}} </h1>
+          <h4 class="text-center">hai totalizzato</h4>
+          <h2 class="text-center">{{credentials.score}} pt.</h2>
+          <button type="button" class="btn mx-auto">Show the Leader-Board </button>
+        </div>
+      </ng-template>
 
     </div>
     </div>
