--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div style="height: 85vh; width: 100vw;" class="d-flex justify-content-center align-items-center">
   <div class="d-flex position-absolute">
-    <div id="centraBox" class="d-flex justify-content-between">
+    <div id="centraBox" class="d-flex justify-content-between rounded">
       <div id="welcomeBox" class="w-50 d-flex flex-column justify-content-center align-items-center">
           <h1 class="w-75 rounded d-inline" style="height: fit-content; text-align: center;">Welcome To Trivia Online!</h1>
           <div style="height: fit-content;" class="d-flex flex-column d-inline-block my-2" id="registerBox">
