--- a/src/app/shared/pages/leaderboard/leaderboard.component.html
+++ b/src/app/shared/pages/leaderboard/leaderboard.component.html
@@ -1,6 +1,6 @@
 <div style="height: 85vh; width: 100vw;" class="d-flex justify-content-center align-items-center">
   <div class="d-flex position-absolute">
-    <div id="centraBox" class="d-flex justify-content-center align-items-center rounded text-white">
+    <div id="centraBox" class="d-flex justify-content-center align-items-start rounded text-white">
       <table class="table">
         <thead>
           <tr>
@@ -10,20 +10,10 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>12</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>11</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>10</td>
+          <tr *ngFor="let elem of leaderboard; index as i">
+            <th scope="row">{{i+1}}</th>
+            <td>{{elem.userName}}</td>
+            <td>{{elem.score}}</td>
           </tr>
         </tbody>
       </table>
