fix about-us page

--- a/src/app/modules/home/pages/aboutus/aboutus.component.html
+++ b/src/app/modules/home/pages/aboutus/aboutus.component.html
@@ -1,49 +1,69 @@
-  <div style="height: 85vh; width: 100vw;" class="d-flex justify-content-center align-items-center">
-    <div class="row position-absolute">
+<div style="height: 85vh; width: 100vw; background-color: #2f9499;" class="d-flex justify-content-center align-items-center">
+  <div class="row position-absolute">
     <div id="centraBox" class="d-flex justify-content-between" style="width: 80vw; height: 60vh;">
       <div id="welcomeBox" class="w-100 d-flex  justify-content-center align-items-center">
-        <div style="width: 20%; border-right: #a86c5d 1px solid;" class="h-100">
-          <section style="height:10vh;" class="d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
-          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
-          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
-            <p class="my-3">Da sempre innamorato di Trivia.</p>
-            <p class="my-3">Scalatore di montagne a mani nude.</p>
+        <div style="width: 25%; border-right: #a86c5d 1px solid;" class="h-100">
+          <section style="height:15vh;" class="d-flex justify-content-center align-items-center">
+            <h4 class="text-center">Marco Costantino</h4>
+          </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d">
+            <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
+              alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-start">
+            <p class="role">Angular developer front-end</p>
+            <p class="role">Scalatore a mani nude</p>
           </div>
         </div>
-        <div style="width: 20%; border-right: #a86c5d 1px solid;" class="h-100">
-          <section style="height:10vh;" class="d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
-          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
-          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
-            <p class="my-3">Da sempre innamorato di Trivia.</p>
-            <p class="my-3">Scalatore di montagne a mani nude.</p>
+        <div style="width: 25%; border-right: #a86c5d 1px solid;" class="h-100">
+          <section style="height:15vh;" class="d-flex justify-content-center align-items-center">
+            <h4 class="text-center">Antonio Platania</h4>
+          </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d">
+            <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
+              alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-start">
+            <p class="role">Front-end developer esperto in RxJs</p>
+            <p class="role">Innamorato da sempre di Trivia</p>
           </div>
         </div>
-        <div style="width: 20%; border-right: #a86c5d 1px solid;" class="h-100">
-          <section style="height:10vh;" class="d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
-          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
-          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
-            <p class="my-3">Da sempre innamorato di Trivia.</p>
-            <p class="my-3">Scalatore di montagne a mani nude.</p>
+        <div style="width: 25%; border-right: #a86c5d 1px solid;" class="h-100">
+          <section style="height:15vh;" class="d-flex justify-content-center align-items-center">
+            <h4 class="text-center">Dylan Bastonini</h4>
+          </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d">
+            <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
+              alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column mt-0 align-items-center justify-content-start">
+            <p class="role">Software developer Angular</p>
+            <p class="role">Pirata informatico</p>
           </div>
         </div>
-        <div style="width: 20%; border-right: #a86c5d 1px solid;" class="h-100">
-          <section style="height:10vh;" class=" d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
-          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
-          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
-            <p class="my-3">Da sempre innamorato di Trivia.</p>
-            <p class="my-3">Scalatore di montagne a mani nude.</p>
+        <div style="width: 25%; border-right: #a86c5d 1px solid;" class="h-100">
+          <section style="height:15vh;" class=" d-flex justify-content-center align-items-center">
+            <h4 class="text-center">Rosalia Spatoliatore</h4>
+          </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d">
+            <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
+              alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-start">
+            <p class="role"> Front-end software developer </p>
+            <p class="role hobby">Ballerina di danze tribali</p>
           </div>
         </div>
-        <div style="width: 20%;" class="h-100 ">
-          <section style="height:10vh;" class=" d-flex justify-content-center align-items-center"><h2>Antonio Platania</h2> </section>
-          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d"><img style="height: 50%;" src="https://icon-library.com/images/icon-developer/icon-developer-16.jpg" alt="icon"></div>
-          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-center">
-            <p class="my-3">Da sempre innamorato di Trivia.</p>
-            <p class="my-3">Scalatore di montagne a mani nude.</p>
+        <div style="width: 25%;" class="h-100 ">
+          <section style="height:15vh;" class=" d-flex justify-content-center align-items-center">
+            <h4 class="text-center">Riccardo Mammima</h4>
+          </section>
+          <div class="d-flex justify-content-center align-items-center" style="height: 15vh; background-color: #a86c5d">
+            <img style="height: 80%;" src="https://cdn1.iconfinder.com/data/icons/data-science-1-1/512/20-512.png"
+              alt="icon"></div>
+          <div style="height: 58.5%;" class="w-100 d-flex flex-column align-items-center justify-content-start">
+            <p class="role">Javascript developer front-end</p>
+            <p class="role">Sognatore a occhi chiusi</p>
           </div>
         </div>
       </div>
-      <game-footer class="w-100" style="position: absolute; bottom: 0;"></game-footer>
+       <game-footer class="w-100 footer" style="position: absolute; bottom: 0;"></game-footer>
+    </div> 
+     
   </div>
-</div>
-
