--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -12,7 +12,7 @@
           </div>
       </div>
       <div id="preview" class="w-50 d-flex justify-content-center align-items-center">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="8000">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -20,13 +20,19 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img style="width: fit-content; height: 300px;" class="d-block" src="assets/img1.jpg" alt="First slide">
+              <video class="img-fluid" autoplay loop muted>
+                <source src="assets/Insert_Username-1.mp4" type="video/mp4" />
+              </video>
             </div>
             <div class="carousel-item">
-              <img style="width: fit-content; height: 300px;" class="d-block" src="assets/img2.jpg" alt="Second slide">
+              <video class="img-fluid" autoplay loop muted>
+                <source src="assets/Mode-1.mp4" type="video/mp4" />
+              </video>
             </div>
             <div class="w-100 carousel-item">
-              <img style="width: fit-content; height: 300px;" class="d-block" src="assets/img3.jpg" alt="Third slide">
+              <video class="img-fluid" autoplay loop muted>
+                <source src="assets/Domande-1.mp4" type="video/mp4" />
+              </video>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
