--- a/src/app/modules/lobby/pages/game-room/game-room.component.html
+++ b/src/app/modules/lobby/pages/game-room/game-room.component.html
@@ -16,7 +16,7 @@
           <h1 class="text-center text-danger">{{credentials.userName}} </h1>
           <h4 class="text-center">hai totalizzato</h4>
           <h2 class="text-center">{{credentials.score}} pt.</h2>
-          <button type="button" class="btn mx-auto">Show the Leader-Board </button>
+          <button type="button" class="btn mx-auto" routerLink="/leaderboard">Show the Leader-Board </button>
         </div>
       </ng-template>
 
